parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    APOSTROPHE
    BREAK
    CLASS
    CONST
    DAPOSTROPHE
    DOT
    ELSE
    ELSIF
    EQUAL
    FALSE
    FOR
    GREATEROREQUAL
    IF
    IN
    LBRACE
    LESSOREQUAL
    NIL
    NONE
    NOT
    NOTEQUAL
    RBRACE
    RETURN
    SEMICOLON
    TRUE

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement statement_list
Rule 4     statement -> assign
Rule 5     statement -> impression
Rule 6     statement -> tupla
Rule 7     statement -> conditions
Rule 8     statement -> while_loop
Rule 9     statement -> case
Rule 10    statement -> Sfunction
Rule 11    statement -> array
Rule 12    statement -> p_SfunctionINV
Rule 13    statement -> aritmeticExpresion
Rule 14    statement -> operator
Rule 15    statement -> dataIn
Rule 16    assign -> INSTANCE_VAR ASSIGN value
Rule 17    assign -> GLOBAL_VAR ASSIGN value
Rule 18    assign -> VARIABLE ASSIGN value
Rule 19    assign -> VARIABLE ASSIGN data_structure
Rule 20    assign -> INSTANCE_VAR ASSIGN data_structure
Rule 21    assign -> GLOBAL_VAR ASSIGN data_structure
Rule 22    VARIABLE -> ID
Rule 23    value -> NUMBER
Rule 24    value -> STRING
Rule 25    value -> BOOLEAN
Rule 26    value -> aritmeticExpresion
Rule 27    value -> conditions
Rule 28    values -> value
Rule 29    values -> value COMMA values
Rule 30    aritmeticExpresion -> value operator value
Rule 31    aritmeticExpresion -> LPAREN aritmeticExpresion RPAREN
Rule 32    operator -> PLUS
Rule 33    operator -> MINUS
Rule 34    operator -> TIMES
Rule 35    operator -> DIVIDE
Rule 36    operator -> MOD
Rule 37    array -> LBRACKET RBRACKET
Rule 38    array -> LBRACKET values RBRACKET
Rule 39    data_structure -> array
Rule 40    data_structure -> tupla
Rule 41    conector -> AND
Rule 42    conector -> OR
Rule 43    operComp -> LESSTHAN
Rule 44    operComp -> GREATERTHAN
Rule 45    condition -> value operComp value
Rule 46    conditions -> condition
Rule 47    conditions -> condition conector conditions
Rule 48    when -> WHEN conditions statement_list
Rule 49    whens -> when
Rule 50    whens -> whens
Rule 51    case -> CASE whens END
Rule 52    Sfunction -> DEF ID statement_list END
Rule 53    p_SfunctionINV -> ID
Rule 54    p_SfunctionINV -> ID LPAREN RPAREN
Rule 55    impression -> PRINT LPAREN values RPAREN
Rule 56    impression -> PRINT values
Rule 57    impression -> PUTS values
Rule 58    impression -> PUTS LPAREN values RPAREN
Rule 59    impression -> P LPAREN values RPAREN
Rule 60    impression -> P values
Rule 61    impression -> PRINT
Rule 62    impression -> PUTS
Rule 63    dataIn -> VARIABLE ASSIGN GETS
Rule 64    dataIn -> INSTANCE_VAR ASSIGN GETS
Rule 65    dataIn -> GLOBAL_VAR ASSIGN GETS
Rule 66    while_loop -> WHILE condition DO statement_list END
Rule 67    tupla -> LPAREN values RPAREN
Rule 68    tupla -> LPAREN RPAREN

Terminals, with rules where they appear

AND                  : 41
APOSTROPHE           : 
ASSIGN               : 16 17 18 19 20 21 63 64 65
BOOLEAN              : 25
BREAK                : 
CASE                 : 51
CLASS                : 
COMMA                : 29
CONST                : 
DAPOSTROPHE          : 
DEF                  : 52
DIVIDE               : 35
DO                   : 66
DOT                  : 
ELSE                 : 
ELSIF                : 
END                  : 51 52 66
EQUAL                : 
FALSE                : 
FOR                  : 
GETS                 : 63 64 65
GLOBAL_VAR           : 17 21 65
GREATEROREQUAL       : 
GREATERTHAN          : 44
ID                   : 22 52 53 54
IF                   : 
IN                   : 
INSTANCE_VAR         : 16 20 64
LBRACE               : 
LBRACKET             : 37 38
LESSOREQUAL          : 
LESSTHAN             : 43
LPAREN               : 31 54 55 58 59 67 68
MINUS                : 33
MOD                  : 36
NIL                  : 
NONE                 : 
NOT                  : 
NOTEQUAL             : 
NUMBER               : 23
OR                   : 42
P                    : 59 60
PLUS                 : 32
PRINT                : 55 56 61
PUTS                 : 57 58 62
RBRACE               : 
RBRACKET             : 37 38
RETURN               : 
RPAREN               : 31 54 55 58 59 67 68
SEMICOLON            : 
STRING               : 24
TIMES                : 34
TRUE                 : 
WHEN                 : 48
WHILE                : 66
error                : 

Nonterminals, with rules where they appear

Sfunction            : 10
VARIABLE             : 18 19 63
aritmeticExpresion   : 13 26 31
array                : 11 39
assign               : 4
case                 : 9
condition            : 46 47 66
conditions           : 7 27 47 48
conector             : 47
dataIn               : 15
data_structure       : 19 20 21
impression           : 5
operComp             : 45
operator             : 14 30
p_SfunctionINV       : 12
program              : 0
statement            : 2 3
statement_list       : 1 3 48 52 66
tupla                : 6 40
value                : 16 17 18 28 29 30 30 45 45
values               : 29 38 55 56 57 58 59 60 67
when                 : 49
whens                : 50 51
while_loop           : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement statement_list
    (4) statement -> . assign
    (5) statement -> . impression
    (6) statement -> . tupla
    (7) statement -> . conditions
    (8) statement -> . while_loop
    (9) statement -> . case
    (10) statement -> . Sfunction
    (11) statement -> . array
    (12) statement -> . p_SfunctionINV
    (13) statement -> . aritmeticExpresion
    (14) statement -> . operator
    (15) statement -> . dataIn
    (16) assign -> . INSTANCE_VAR ASSIGN value
    (17) assign -> . GLOBAL_VAR ASSIGN value
    (18) assign -> . VARIABLE ASSIGN value
    (19) assign -> . VARIABLE ASSIGN data_structure
    (20) assign -> . INSTANCE_VAR ASSIGN data_structure
    (21) assign -> . GLOBAL_VAR ASSIGN data_structure
    (55) impression -> . PRINT LPAREN values RPAREN
    (56) impression -> . PRINT values
    (57) impression -> . PUTS values
    (58) impression -> . PUTS LPAREN values RPAREN
    (59) impression -> . P LPAREN values RPAREN
    (60) impression -> . P values
    (61) impression -> . PRINT
    (62) impression -> . PUTS
    (67) tupla -> . LPAREN values RPAREN
    (68) tupla -> . LPAREN RPAREN
    (46) conditions -> . condition
    (47) conditions -> . condition conector conditions
    (66) while_loop -> . WHILE condition DO statement_list END
    (51) case -> . CASE whens END
    (52) Sfunction -> . DEF ID statement_list END
    (37) array -> . LBRACKET RBRACKET
    (38) array -> . LBRACKET values RBRACKET
    (53) p_SfunctionINV -> . ID
    (54) p_SfunctionINV -> . ID LPAREN RPAREN
    (30) aritmeticExpresion -> . value operator value
    (31) aritmeticExpresion -> . LPAREN aritmeticExpresion RPAREN
    (32) operator -> . PLUS
    (33) operator -> . MINUS
    (34) operator -> . TIMES
    (35) operator -> . DIVIDE
    (36) operator -> . MOD
    (63) dataIn -> . VARIABLE ASSIGN GETS
    (64) dataIn -> . INSTANCE_VAR ASSIGN GETS
    (65) dataIn -> . GLOBAL_VAR ASSIGN GETS
    (22) VARIABLE -> . ID
    (45) condition -> . value operComp value
    (23) value -> . NUMBER
    (24) value -> . STRING
    (25) value -> . BOOLEAN
    (26) value -> . aritmeticExpresion
    (27) value -> . conditions

    INSTANCE_VAR    shift and go to state 16
    GLOBAL_VAR      shift and go to state 18
    PRINT           shift and go to state 20
    PUTS            shift and go to state 22
    P               shift and go to state 23
    LPAREN          shift and go to state 21
    WHILE           shift and go to state 25
    CASE            shift and go to state 26
    DEF             shift and go to state 27
    LBRACKET        shift and go to state 29
    ID              shift and go to state 28
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    TIMES           shift and go to state 32
    DIVIDE          shift and go to state 33
    MOD             shift and go to state 34
    NUMBER          shift and go to state 35
    STRING          shift and go to state 36
    BOOLEAN         shift and go to state 37

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    assign                         shift and go to state 4
    impression                     shift and go to state 5
    tupla                          shift and go to state 6
    conditions                     shift and go to state 7
    while_loop                     shift and go to state 8
    case                           shift and go to state 9
    Sfunction                      shift and go to state 10
    array                          shift and go to state 11
    p_SfunctionINV                 shift and go to state 12
    aritmeticExpresion             shift and go to state 13
    operator                       shift and go to state 14
    dataIn                         shift and go to state 15
    value                          shift and go to state 17
    VARIABLE                       shift and go to state 19
    condition                      shift and go to state 24

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .

    $end            reduce using rule 1 (program -> statement_list .)


state 3

    (2) statement_list -> statement .
    (3) statement_list -> statement . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement statement_list
    (4) statement -> . assign
    (5) statement -> . impression
    (6) statement -> . tupla
    (7) statement -> . conditions
    (8) statement -> . while_loop
    (9) statement -> . case
    (10) statement -> . Sfunction
    (11) statement -> . array
    (12) statement -> . p_SfunctionINV
    (13) statement -> . aritmeticExpresion
    (14) statement -> . operator
    (15) statement -> . dataIn
    (16) assign -> . INSTANCE_VAR ASSIGN value
    (17) assign -> . GLOBAL_VAR ASSIGN value
    (18) assign -> . VARIABLE ASSIGN value
    (19) assign -> . VARIABLE ASSIGN data_structure
    (20) assign -> . INSTANCE_VAR ASSIGN data_structure
    (21) assign -> . GLOBAL_VAR ASSIGN data_structure
    (55) impression -> . PRINT LPAREN values RPAREN
    (56) impression -> . PRINT values
    (57) impression -> . PUTS values
    (58) impression -> . PUTS LPAREN values RPAREN
    (59) impression -> . P LPAREN values RPAREN
    (60) impression -> . P values
    (61) impression -> . PRINT
    (62) impression -> . PUTS
    (67) tupla -> . LPAREN values RPAREN
    (68) tupla -> . LPAREN RPAREN
    (46) conditions -> . condition
    (47) conditions -> . condition conector conditions
    (66) while_loop -> . WHILE condition DO statement_list END
    (51) case -> . CASE whens END
    (52) Sfunction -> . DEF ID statement_list END
    (37) array -> . LBRACKET RBRACKET
    (38) array -> . LBRACKET values RBRACKET
    (53) p_SfunctionINV -> . ID
    (54) p_SfunctionINV -> . ID LPAREN RPAREN
    (30) aritmeticExpresion -> . value operator value
    (31) aritmeticExpresion -> . LPAREN aritmeticExpresion RPAREN
    (32) operator -> . PLUS
    (33) operator -> . MINUS
    (34) operator -> . TIMES
    (35) operator -> . DIVIDE
    (36) operator -> . MOD
    (63) dataIn -> . VARIABLE ASSIGN GETS
    (64) dataIn -> . INSTANCE_VAR ASSIGN GETS
    (65) dataIn -> . GLOBAL_VAR ASSIGN GETS
    (22) VARIABLE -> . ID
    (45) condition -> . value operComp value
    (23) value -> . NUMBER
    (24) value -> . STRING
    (25) value -> . BOOLEAN
    (26) value -> . aritmeticExpresion
    (27) value -> . conditions

    $end            reduce using rule 2 (statement_list -> statement .)
    END             reduce using rule 2 (statement_list -> statement .)
    INSTANCE_VAR    shift and go to state 16
    GLOBAL_VAR      shift and go to state 18
    PRINT           shift and go to state 20
    PUTS            shift and go to state 22
    P               shift and go to state 23
    LPAREN          shift and go to state 21
    WHILE           shift and go to state 25
    CASE            shift and go to state 26
    DEF             shift and go to state 27
    LBRACKET        shift and go to state 29
    ID              shift and go to state 28
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    TIMES           shift and go to state 32
    DIVIDE          shift and go to state 33
    MOD             shift and go to state 34
    NUMBER          shift and go to state 35
    STRING          shift and go to state 36
    BOOLEAN         shift and go to state 37

    statement                      shift and go to state 3
    statement_list                 shift and go to state 38
    assign                         shift and go to state 4
    impression                     shift and go to state 5
    tupla                          shift and go to state 6
    conditions                     shift and go to state 7
    while_loop                     shift and go to state 8
    case                           shift and go to state 9
    Sfunction                      shift and go to state 10
    array                          shift and go to state 11
    p_SfunctionINV                 shift and go to state 12
    aritmeticExpresion             shift and go to state 13
    operator                       shift and go to state 14
    dataIn                         shift and go to state 15
    value                          shift and go to state 17
    VARIABLE                       shift and go to state 19
    condition                      shift and go to state 24

state 4

    (4) statement -> assign .

    INSTANCE_VAR    reduce using rule 4 (statement -> assign .)
    GLOBAL_VAR      reduce using rule 4 (statement -> assign .)
    PRINT           reduce using rule 4 (statement -> assign .)
    PUTS            reduce using rule 4 (statement -> assign .)
    P               reduce using rule 4 (statement -> assign .)
    LPAREN          reduce using rule 4 (statement -> assign .)
    WHILE           reduce using rule 4 (statement -> assign .)
    CASE            reduce using rule 4 (statement -> assign .)
    DEF             reduce using rule 4 (statement -> assign .)
    LBRACKET        reduce using rule 4 (statement -> assign .)
    ID              reduce using rule 4 (statement -> assign .)
    PLUS            reduce using rule 4 (statement -> assign .)
    MINUS           reduce using rule 4 (statement -> assign .)
    TIMES           reduce using rule 4 (statement -> assign .)
    DIVIDE          reduce using rule 4 (statement -> assign .)
    MOD             reduce using rule 4 (statement -> assign .)
    NUMBER          reduce using rule 4 (statement -> assign .)
    STRING          reduce using rule 4 (statement -> assign .)
    BOOLEAN         reduce using rule 4 (statement -> assign .)
    $end            reduce using rule 4 (statement -> assign .)
    END             reduce using rule 4 (statement -> assign .)


state 5

    (5) statement -> impression .

    INSTANCE_VAR    reduce using rule 5 (statement -> impression .)
    GLOBAL_VAR      reduce using rule 5 (statement -> impression .)
    PRINT           reduce using rule 5 (statement -> impression .)
    PUTS            reduce using rule 5 (statement -> impression .)
    P               reduce using rule 5 (statement -> impression .)
    LPAREN          reduce using rule 5 (statement -> impression .)
    WHILE           reduce using rule 5 (statement -> impression .)
    CASE            reduce using rule 5 (statement -> impression .)
    DEF             reduce using rule 5 (statement -> impression .)
    LBRACKET        reduce using rule 5 (statement -> impression .)
    ID              reduce using rule 5 (statement -> impression .)
    PLUS            reduce using rule 5 (statement -> impression .)
    MINUS           reduce using rule 5 (statement -> impression .)
    TIMES           reduce using rule 5 (statement -> impression .)
    DIVIDE          reduce using rule 5 (statement -> impression .)
    MOD             reduce using rule 5 (statement -> impression .)
    NUMBER          reduce using rule 5 (statement -> impression .)
    STRING          reduce using rule 5 (statement -> impression .)
    BOOLEAN         reduce using rule 5 (statement -> impression .)
    $end            reduce using rule 5 (statement -> impression .)
    END             reduce using rule 5 (statement -> impression .)


state 6

    (6) statement -> tupla .

    INSTANCE_VAR    reduce using rule 6 (statement -> tupla .)
    GLOBAL_VAR      reduce using rule 6 (statement -> tupla .)
    PRINT           reduce using rule 6 (statement -> tupla .)
    PUTS            reduce using rule 6 (statement -> tupla .)
    P               reduce using rule 6 (statement -> tupla .)
    LPAREN          reduce using rule 6 (statement -> tupla .)
    WHILE           reduce using rule 6 (statement -> tupla .)
    CASE            reduce using rule 6 (statement -> tupla .)
    DEF             reduce using rule 6 (statement -> tupla .)
    LBRACKET        reduce using rule 6 (statement -> tupla .)
    ID              reduce using rule 6 (statement -> tupla .)
    PLUS            reduce using rule 6 (statement -> tupla .)
    MINUS           reduce using rule 6 (statement -> tupla .)
    TIMES           reduce using rule 6 (statement -> tupla .)
    DIVIDE          reduce using rule 6 (statement -> tupla .)
    MOD             reduce using rule 6 (statement -> tupla .)
    NUMBER          reduce using rule 6 (statement -> tupla .)
    STRING          reduce using rule 6 (statement -> tupla .)
    BOOLEAN         reduce using rule 6 (statement -> tupla .)
    $end            reduce using rule 6 (statement -> tupla .)
    END             reduce using rule 6 (statement -> tupla .)


state 7

    (7) statement -> conditions .
    (27) value -> conditions .

  ! reduce/reduce conflict for PLUS resolved using rule 7 (statement -> conditions .)
  ! reduce/reduce conflict for MINUS resolved using rule 7 (statement -> conditions .)
  ! reduce/reduce conflict for TIMES resolved using rule 7 (statement -> conditions .)
  ! reduce/reduce conflict for DIVIDE resolved using rule 7 (statement -> conditions .)
  ! reduce/reduce conflict for MOD resolved using rule 7 (statement -> conditions .)
    INSTANCE_VAR    reduce using rule 7 (statement -> conditions .)
    GLOBAL_VAR      reduce using rule 7 (statement -> conditions .)
    PRINT           reduce using rule 7 (statement -> conditions .)
    PUTS            reduce using rule 7 (statement -> conditions .)
    P               reduce using rule 7 (statement -> conditions .)
    LPAREN          reduce using rule 7 (statement -> conditions .)
    WHILE           reduce using rule 7 (statement -> conditions .)
    CASE            reduce using rule 7 (statement -> conditions .)
    DEF             reduce using rule 7 (statement -> conditions .)
    LBRACKET        reduce using rule 7 (statement -> conditions .)
    ID              reduce using rule 7 (statement -> conditions .)
    PLUS            reduce using rule 7 (statement -> conditions .)
    MINUS           reduce using rule 7 (statement -> conditions .)
    TIMES           reduce using rule 7 (statement -> conditions .)
    DIVIDE          reduce using rule 7 (statement -> conditions .)
    MOD             reduce using rule 7 (statement -> conditions .)
    NUMBER          reduce using rule 7 (statement -> conditions .)
    STRING          reduce using rule 7 (statement -> conditions .)
    BOOLEAN         reduce using rule 7 (statement -> conditions .)
    $end            reduce using rule 7 (statement -> conditions .)
    END             reduce using rule 7 (statement -> conditions .)
    LESSTHAN        reduce using rule 27 (value -> conditions .)
    GREATERTHAN     reduce using rule 27 (value -> conditions .)

  ! PLUS            [ reduce using rule 27 (value -> conditions .) ]
  ! MINUS           [ reduce using rule 27 (value -> conditions .) ]
  ! TIMES           [ reduce using rule 27 (value -> conditions .) ]
  ! DIVIDE          [ reduce using rule 27 (value -> conditions .) ]
  ! MOD             [ reduce using rule 27 (value -> conditions .) ]


state 8

    (8) statement -> while_loop .

    INSTANCE_VAR    reduce using rule 8 (statement -> while_loop .)
    GLOBAL_VAR      reduce using rule 8 (statement -> while_loop .)
    PRINT           reduce using rule 8 (statement -> while_loop .)
    PUTS            reduce using rule 8 (statement -> while_loop .)
    P               reduce using rule 8 (statement -> while_loop .)
    LPAREN          reduce using rule 8 (statement -> while_loop .)
    WHILE           reduce using rule 8 (statement -> while_loop .)
    CASE            reduce using rule 8 (statement -> while_loop .)
    DEF             reduce using rule 8 (statement -> while_loop .)
    LBRACKET        reduce using rule 8 (statement -> while_loop .)
    ID              reduce using rule 8 (statement -> while_loop .)
    PLUS            reduce using rule 8 (statement -> while_loop .)
    MINUS           reduce using rule 8 (statement -> while_loop .)
    TIMES           reduce using rule 8 (statement -> while_loop .)
    DIVIDE          reduce using rule 8 (statement -> while_loop .)
    MOD             reduce using rule 8 (statement -> while_loop .)
    NUMBER          reduce using rule 8 (statement -> while_loop .)
    STRING          reduce using rule 8 (statement -> while_loop .)
    BOOLEAN         reduce using rule 8 (statement -> while_loop .)
    $end            reduce using rule 8 (statement -> while_loop .)
    END             reduce using rule 8 (statement -> while_loop .)


state 9

    (9) statement -> case .

    INSTANCE_VAR    reduce using rule 9 (statement -> case .)
    GLOBAL_VAR      reduce using rule 9 (statement -> case .)
    PRINT           reduce using rule 9 (statement -> case .)
    PUTS            reduce using rule 9 (statement -> case .)
    P               reduce using rule 9 (statement -> case .)
    LPAREN          reduce using rule 9 (statement -> case .)
    WHILE           reduce using rule 9 (statement -> case .)
    CASE            reduce using rule 9 (statement -> case .)
    DEF             reduce using rule 9 (statement -> case .)
    LBRACKET        reduce using rule 9 (statement -> case .)
    ID              reduce using rule 9 (statement -> case .)
    PLUS            reduce using rule 9 (statement -> case .)
    MINUS           reduce using rule 9 (statement -> case .)
    TIMES           reduce using rule 9 (statement -> case .)
    DIVIDE          reduce using rule 9 (statement -> case .)
    MOD             reduce using rule 9 (statement -> case .)
    NUMBER          reduce using rule 9 (statement -> case .)
    STRING          reduce using rule 9 (statement -> case .)
    BOOLEAN         reduce using rule 9 (statement -> case .)
    $end            reduce using rule 9 (statement -> case .)
    END             reduce using rule 9 (statement -> case .)


state 10

    (10) statement -> Sfunction .

    INSTANCE_VAR    reduce using rule 10 (statement -> Sfunction .)
    GLOBAL_VAR      reduce using rule 10 (statement -> Sfunction .)
    PRINT           reduce using rule 10 (statement -> Sfunction .)
    PUTS            reduce using rule 10 (statement -> Sfunction .)
    P               reduce using rule 10 (statement -> Sfunction .)
    LPAREN          reduce using rule 10 (statement -> Sfunction .)
    WHILE           reduce using rule 10 (statement -> Sfunction .)
    CASE            reduce using rule 10 (statement -> Sfunction .)
    DEF             reduce using rule 10 (statement -> Sfunction .)
    LBRACKET        reduce using rule 10 (statement -> Sfunction .)
    ID              reduce using rule 10 (statement -> Sfunction .)
    PLUS            reduce using rule 10 (statement -> Sfunction .)
    MINUS           reduce using rule 10 (statement -> Sfunction .)
    TIMES           reduce using rule 10 (statement -> Sfunction .)
    DIVIDE          reduce using rule 10 (statement -> Sfunction .)
    MOD             reduce using rule 10 (statement -> Sfunction .)
    NUMBER          reduce using rule 10 (statement -> Sfunction .)
    STRING          reduce using rule 10 (statement -> Sfunction .)
    BOOLEAN         reduce using rule 10 (statement -> Sfunction .)
    $end            reduce using rule 10 (statement -> Sfunction .)
    END             reduce using rule 10 (statement -> Sfunction .)


state 11

    (11) statement -> array .

    INSTANCE_VAR    reduce using rule 11 (statement -> array .)
    GLOBAL_VAR      reduce using rule 11 (statement -> array .)
    PRINT           reduce using rule 11 (statement -> array .)
    PUTS            reduce using rule 11 (statement -> array .)
    P               reduce using rule 11 (statement -> array .)
    LPAREN          reduce using rule 11 (statement -> array .)
    WHILE           reduce using rule 11 (statement -> array .)
    CASE            reduce using rule 11 (statement -> array .)
    DEF             reduce using rule 11 (statement -> array .)
    LBRACKET        reduce using rule 11 (statement -> array .)
    ID              reduce using rule 11 (statement -> array .)
    PLUS            reduce using rule 11 (statement -> array .)
    MINUS           reduce using rule 11 (statement -> array .)
    TIMES           reduce using rule 11 (statement -> array .)
    DIVIDE          reduce using rule 11 (statement -> array .)
    MOD             reduce using rule 11 (statement -> array .)
    NUMBER          reduce using rule 11 (statement -> array .)
    STRING          reduce using rule 11 (statement -> array .)
    BOOLEAN         reduce using rule 11 (statement -> array .)
    $end            reduce using rule 11 (statement -> array .)
    END             reduce using rule 11 (statement -> array .)


state 12

    (12) statement -> p_SfunctionINV .

    INSTANCE_VAR    reduce using rule 12 (statement -> p_SfunctionINV .)
    GLOBAL_VAR      reduce using rule 12 (statement -> p_SfunctionINV .)
    PRINT           reduce using rule 12 (statement -> p_SfunctionINV .)
    PUTS            reduce using rule 12 (statement -> p_SfunctionINV .)
    P               reduce using rule 12 (statement -> p_SfunctionINV .)
    LPAREN          reduce using rule 12 (statement -> p_SfunctionINV .)
    WHILE           reduce using rule 12 (statement -> p_SfunctionINV .)
    CASE            reduce using rule 12 (statement -> p_SfunctionINV .)
    DEF             reduce using rule 12 (statement -> p_SfunctionINV .)
    LBRACKET        reduce using rule 12 (statement -> p_SfunctionINV .)
    ID              reduce using rule 12 (statement -> p_SfunctionINV .)
    PLUS            reduce using rule 12 (statement -> p_SfunctionINV .)
    MINUS           reduce using rule 12 (statement -> p_SfunctionINV .)
    TIMES           reduce using rule 12 (statement -> p_SfunctionINV .)
    DIVIDE          reduce using rule 12 (statement -> p_SfunctionINV .)
    MOD             reduce using rule 12 (statement -> p_SfunctionINV .)
    NUMBER          reduce using rule 12 (statement -> p_SfunctionINV .)
    STRING          reduce using rule 12 (statement -> p_SfunctionINV .)
    BOOLEAN         reduce using rule 12 (statement -> p_SfunctionINV .)
    $end            reduce using rule 12 (statement -> p_SfunctionINV .)
    END             reduce using rule 12 (statement -> p_SfunctionINV .)


state 13

    (13) statement -> aritmeticExpresion .
    (26) value -> aritmeticExpresion .

  ! reduce/reduce conflict for PLUS resolved using rule 13 (statement -> aritmeticExpresion .)
  ! reduce/reduce conflict for MINUS resolved using rule 13 (statement -> aritmeticExpresion .)
  ! reduce/reduce conflict for TIMES resolved using rule 13 (statement -> aritmeticExpresion .)
  ! reduce/reduce conflict for DIVIDE resolved using rule 13 (statement -> aritmeticExpresion .)
  ! reduce/reduce conflict for MOD resolved using rule 13 (statement -> aritmeticExpresion .)
    INSTANCE_VAR    reduce using rule 13 (statement -> aritmeticExpresion .)
    GLOBAL_VAR      reduce using rule 13 (statement -> aritmeticExpresion .)
    PRINT           reduce using rule 13 (statement -> aritmeticExpresion .)
    PUTS            reduce using rule 13 (statement -> aritmeticExpresion .)
    P               reduce using rule 13 (statement -> aritmeticExpresion .)
    LPAREN          reduce using rule 13 (statement -> aritmeticExpresion .)
    WHILE           reduce using rule 13 (statement -> aritmeticExpresion .)
    CASE            reduce using rule 13 (statement -> aritmeticExpresion .)
    DEF             reduce using rule 13 (statement -> aritmeticExpresion .)
    LBRACKET        reduce using rule 13 (statement -> aritmeticExpresion .)
    ID              reduce using rule 13 (statement -> aritmeticExpresion .)
    PLUS            reduce using rule 13 (statement -> aritmeticExpresion .)
    MINUS           reduce using rule 13 (statement -> aritmeticExpresion .)
    TIMES           reduce using rule 13 (statement -> aritmeticExpresion .)
    DIVIDE          reduce using rule 13 (statement -> aritmeticExpresion .)
    MOD             reduce using rule 13 (statement -> aritmeticExpresion .)
    NUMBER          reduce using rule 13 (statement -> aritmeticExpresion .)
    STRING          reduce using rule 13 (statement -> aritmeticExpresion .)
    BOOLEAN         reduce using rule 13 (statement -> aritmeticExpresion .)
    $end            reduce using rule 13 (statement -> aritmeticExpresion .)
    END             reduce using rule 13 (statement -> aritmeticExpresion .)
    LESSTHAN        reduce using rule 26 (value -> aritmeticExpresion .)
    GREATERTHAN     reduce using rule 26 (value -> aritmeticExpresion .)

  ! PLUS            [ reduce using rule 26 (value -> aritmeticExpresion .) ]
  ! MINUS           [ reduce using rule 26 (value -> aritmeticExpresion .) ]
  ! TIMES           [ reduce using rule 26 (value -> aritmeticExpresion .) ]
  ! DIVIDE          [ reduce using rule 26 (value -> aritmeticExpresion .) ]
  ! MOD             [ reduce using rule 26 (value -> aritmeticExpresion .) ]


state 14

    (14) statement -> operator .

    INSTANCE_VAR    reduce using rule 14 (statement -> operator .)
    GLOBAL_VAR      reduce using rule 14 (statement -> operator .)
    PRINT           reduce using rule 14 (statement -> operator .)
    PUTS            reduce using rule 14 (statement -> operator .)
    P               reduce using rule 14 (statement -> operator .)
    LPAREN          reduce using rule 14 (statement -> operator .)
    WHILE           reduce using rule 14 (statement -> operator .)
    CASE            reduce using rule 14 (statement -> operator .)
    DEF             reduce using rule 14 (statement -> operator .)
    LBRACKET        reduce using rule 14 (statement -> operator .)
    ID              reduce using rule 14 (statement -> operator .)
    PLUS            reduce using rule 14 (statement -> operator .)
    MINUS           reduce using rule 14 (statement -> operator .)
    TIMES           reduce using rule 14 (statement -> operator .)
    DIVIDE          reduce using rule 14 (statement -> operator .)
    MOD             reduce using rule 14 (statement -> operator .)
    NUMBER          reduce using rule 14 (statement -> operator .)
    STRING          reduce using rule 14 (statement -> operator .)
    BOOLEAN         reduce using rule 14 (statement -> operator .)
    $end            reduce using rule 14 (statement -> operator .)
    END             reduce using rule 14 (statement -> operator .)


state 15

    (15) statement -> dataIn .

    INSTANCE_VAR    reduce using rule 15 (statement -> dataIn .)
    GLOBAL_VAR      reduce using rule 15 (statement -> dataIn .)
    PRINT           reduce using rule 15 (statement -> dataIn .)
    PUTS            reduce using rule 15 (statement -> dataIn .)
    P               reduce using rule 15 (statement -> dataIn .)
    LPAREN          reduce using rule 15 (statement -> dataIn .)
    WHILE           reduce using rule 15 (statement -> dataIn .)
    CASE            reduce using rule 15 (statement -> dataIn .)
    DEF             reduce using rule 15 (statement -> dataIn .)
    LBRACKET        reduce using rule 15 (statement -> dataIn .)
    ID              reduce using rule 15 (statement -> dataIn .)
    PLUS            reduce using rule 15 (statement -> dataIn .)
    MINUS           reduce using rule 15 (statement -> dataIn .)
    TIMES           reduce using rule 15 (statement -> dataIn .)
    DIVIDE          reduce using rule 15 (statement -> dataIn .)
    MOD             reduce using rule 15 (statement -> dataIn .)
    NUMBER          reduce using rule 15 (statement -> dataIn .)
    STRING          reduce using rule 15 (statement -> dataIn .)
    BOOLEAN         reduce using rule 15 (statement -> dataIn .)
    $end            reduce using rule 15 (statement -> dataIn .)
    END             reduce using rule 15 (statement -> dataIn .)


state 16

    (16) assign -> INSTANCE_VAR . ASSIGN value
    (20) assign -> INSTANCE_VAR . ASSIGN data_structure
    (64) dataIn -> INSTANCE_VAR . ASSIGN GETS

    ASSIGN          shift and go to state 39


state 17

    (30) aritmeticExpresion -> value . operator value
    (45) condition -> value . operComp value
    (32) operator -> . PLUS
    (33) operator -> . MINUS
    (34) operator -> . TIMES
    (35) operator -> . DIVIDE
    (36) operator -> . MOD
    (43) operComp -> . LESSTHAN
    (44) operComp -> . GREATERTHAN

    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    TIMES           shift and go to state 32
    DIVIDE          shift and go to state 33
    MOD             shift and go to state 34
    LESSTHAN        shift and go to state 42
    GREATERTHAN     shift and go to state 43

    operator                       shift and go to state 40
    operComp                       shift and go to state 41

state 18

    (17) assign -> GLOBAL_VAR . ASSIGN value
    (21) assign -> GLOBAL_VAR . ASSIGN data_structure
    (65) dataIn -> GLOBAL_VAR . ASSIGN GETS

    ASSIGN          shift and go to state 44


state 19

    (18) assign -> VARIABLE . ASSIGN value
    (19) assign -> VARIABLE . ASSIGN data_structure
    (63) dataIn -> VARIABLE . ASSIGN GETS

    ASSIGN          shift and go to state 45


state 20

    (55) impression -> PRINT . LPAREN values RPAREN
    (56) impression -> PRINT . values
    (61) impression -> PRINT .
    (28) values -> . value
    (29) values -> . value COMMA values
    (23) value -> . NUMBER
    (24) value -> . STRING
    (25) value -> . BOOLEAN
    (26) value -> . aritmeticExpresion
    (27) value -> . conditions
    (30) aritmeticExpresion -> . value operator value
    (31) aritmeticExpresion -> . LPAREN aritmeticExpresion RPAREN
    (46) conditions -> . condition
    (47) conditions -> . condition conector conditions
    (45) condition -> . value operComp value
